<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AgregarFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/fAgregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:text="@string/Agregar" />

    <EditText
        android:id="@+id/eID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:hint="@string/id" />

    <EditText
        android:id="@+id/eNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nombre" />

    <EditText
        android:id="@+id/eCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/cantidad" />

    <EditText
        android:id="@+id/ePrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/precio" />

    <Button
        android:id="@+id/bAgregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="italic"
        android:textSize="20sp"
        android:text="@string/Agregar" />

</LinearLayout>