<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BuscarFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tBuscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/buscarPe"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tbNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/nombre"
        android:textColor="@color/black"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/eBuscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:hint="@string/ebNombre" />

    <Button
        android:id="@+id/bBuscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buscar"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="@color/black"/>

</LinearLayout>