<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EliminarFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/fEliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EliminarP"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/teEmilinar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eNombre"
        android:layout_gravity="center_horizontal"
        android:textSize="15sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/eElimnarPe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/eElimibarPelu" />

    <Button
        android:id="@+id/bEliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic"
        android:text="Eliminar" />

</LinearLayout>